--- a/example/package.json
+++ b/example/package.json
@@ -7,6 +7,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "moment": "^2.20.1",
     "react": "^16.3.0-alpha.1",
     "react-native": "0.54.0"
   },
