--- a/example/package.json
+++ b/example/package.json
@@ -9,7 +9,8 @@
   "dependencies": {
     "moment": "^2.20.1",
     "react": "^16.3.0-alpha.1",
-    "react-native": "0.54.0"
+    "react-native": "0.54.0",
+    "react-native-vector-icons": "^4.5.0"
   },
   "devDependencies": {
     "babel-jest": "22.4.1",
