--- a/example/package.json
+++ b/example/package.json
@@ -10,6 +10,7 @@
     "moment": "^2.20.1",
     "react": "^16.3.0-alpha.1",
     "react-native": "0.54.0",
+    "react-native-dash": "^0.0.8",
     "react-native-vector-icons": "^4.5.0"
   },
   "devDependencies": {
