--- a/package.json
+++ b/package.json
@@ -2,10 +2,13 @@
   "name": "react-native-timeline-theme",
   "version": "0.0.6",
   "dependencies ": {
-    "prop-types": ">=15.6.0"
+    "prop-types": "^15.6.0"
   },
   "devDependencies": {
-    "react-native-dash": ">=0.0.8"
+    "react-native-dash": "^0.0.8"
+  },
+  "peerDependencies": {
+    "react-native-dash": "^0.0.8"
   },
   "jest": {
     "preset": "react-native"
