--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "version": "0.0.8",
   "dependencies ": {
     "prop-types": "^15.6.0",
-    "react-native-dash": "^0.0.8"
+    "react-native-dash": "0.0.8"
   },
   "devDependencies": {
-    "react-native-dash": "^0.0.8"
+    "react-native-dash": "0.0.8"
   },
   "peerDependencies": {
-    "react-native-dash": "^0.0.8"
+    "react-native-dash": "0.0.8"
   },
   "jest": {
     "preset": "react-native"
